Update deps to the latest deps

--- a/Chips.cabal
+++ b/Chips.cabal
@@ -14,13 +14,13 @@ cabal-version:       >=1.8
 
 executable chips
   build-depends:       base >=4.6,
-                       gloss ==1.8.*,
-                       lens ==3.9.*,
-                       mtl ==2.1.*,
-                       template-haskell ==2.8.*,
-                       ActionKid ==0.1.*,
+                       gloss,
+                       lens,
+                       mtl,
+                       template-haskell,
+                       ActionKid,
                        time,
-                       aeson ==0.6.*,
+                       aeson,
                        bytestring ==0.10.*
   hs-source-dirs:      src
   main-is: Main.hs
